src/snapshots/tui_term__widget__tests__simple_ls_with_block.snap
---
source: src/widget.rs
expression: view
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 24 },
    content: [
        "┌ls────────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│ Cargo.lock      docs         LICENSE               test                                      │",
        "│ Cargo.toml      examples     README.md             typescript                                │",
        "│ CHANGELOG.md    flake.lock   rust-toolchain.toml   wezterm                                   │",
        "│ cliff.toml      flake.nix    src                                                              │",
        "│ committed.toml   justfile     target                                                          │",
        "│tui-term on  main [!?⇡] via ❄️pure (tui-term-env)                                                │", // hidden by multi-width symbols: [(31, " ")]
        "│❯                                                                                                 │",
        "│                                                                                                  │",
        "│█                                                                                                 │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 1, fg: Indexed(4), bg: Reset, underline: Reset, modifier: BOLD,
        x: 24, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 1, fg: Indexed(4), bg: Reset, underline: Reset, modifier: BOLD,
        x: 61, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Indexed(4), bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 3, fg: Indexed(4), bg: Reset, underline: Reset, modifier: BOLD,
        x: 64, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 4, fg: Indexed(4), bg: Reset, underline: Reset, modifier: BOLD,
        x: 37, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 5, fg: Indexed(4), bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Indexed(6), bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 6, fg: Indexed(5), bg: Reset, underline: Reset, modifier: BOLD,
        x: 19, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 6, fg: Indexed(1), bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 6, fg: Indexed(4), bg: Reset, underline: Reset, modifier: BOLD,
        x: 51, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Indexed(2), bg: Reset, underline: Reset, modifier: BOLD,
        x: 2, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
